AI now auto posses the AIPlayer in world or when spawned.

--- a/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -4277,6 +4277,7 @@ CleanShutdown=False
 SuppressRestorePreviouslyOpenAssetsNotification=True
 OpenAssetsAtExit=/Game/Blueprints/GameModes/BP_TestGameState.BP_TestGameState
 OpenAssetsAtExit=/Game/Blueprints/GameModes/BP_TestGameMode.BP_TestGameMode
+OpenAssetsAtExit=/Game/AdvancedAI/BP_AIPlayer.BP_AIPlayer
 
 [RootWindow]
 ScreenPosition=X=470.000 Y=198.000
@@ -4466,7 +4467,7 @@ FloatProperty=BP_PlayerPawn_C.Physics.ConstraintsGroup,BP_PlayerPawn_C.Rendering
 
 [DetailPropertyExpansion]
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[3]\" "
-Object=
+Object="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
 BP_PlayerPawn_C="\"Object.Components.camera.Object.PostProcess.PostProcessSettings\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorSaturationShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorContrastShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGammaShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGainShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorOffsetShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.LensFlareTints\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 SCharacter="\"Object.Components.camera.Object.PostProcess.PostProcessSettings\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorSaturationShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorContrastShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGammaShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGainShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorOffsetShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.LensFlareTints\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 Character="\"Object.Components.camera.Object.PostProcess.PostProcessSettings\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorSaturationShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorContrastShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGammaShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGainShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorOffsetShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.LensFlareTints\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
@@ -4484,9 +4485,9 @@ DataAsset="\"Object.Blackboard\" \"Object.Blackboard.Keys.Keys[2].KeyType\" "
 SkeletalMeshComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
 SkinnedMeshComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
 MeshComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
-PrimitiveComponent="\"Object.Collision.BodyInstance\" "
-SceneComponent="\"Object.Collision.BodyInstance\" "
-ActorComponent="\"Object.Collision.BodyInstance\" "
+PrimitiveComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
+SceneComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
+ActorComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
 ParticleModuleColorOverLife="\"Object.Color.ColorOverLife.Distribution\" \"Object.Color.AlphaOverLife\" \"Object.Color.AlphaOverLife.Distribution\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve.Points\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve.Points.Points[0]\" "
 ParticleModuleColorBase="\"Object.Color.ColorOverLife.Distribution\" \"Object.Color.AlphaOverLife\" \"Object.Color.AlphaOverLife.Distribution\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve.Points\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve.Points.Points[0]\" "
 ParticleModule="\"Object.Color.ColorOverLife.Distribution\" \"Object.Color.AlphaOverLife\" \"Object.Color.AlphaOverLife.Distribution\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve.Points\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve.Points.Points[0]\" "
@@ -4627,12 +4628,13 @@ AIPerceptionComponent="\"Object.AI Perception.SensesConfig\" \"Object.AI Percept
 REINST_BP_AIPlayer_C_210="\"Object.Components.camera.Object.PostProcess.PostProcessSettings\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorSaturationShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorContrastShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGammaShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGainShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorOffsetShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.LensFlareTints\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 REINST_BP_AIPlayer_C_62="\"Object.Components.camera.Object.PostProcess.PostProcessSettings\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorSaturationShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorContrastShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGammaShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGainShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorOffsetShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.LensFlareTints\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 REINST_BP_AIPlayer_C_65="\"Object.Components.camera.Object.PostProcess.PostProcessSettings\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorSaturationShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorContrastShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGammaShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGainShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorOffsetShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.LensFlareTints\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+REINST_BP_AIPlayer_C_85="\"Object.Components.camera.Object.PostProcess.PostProcessSettings\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorSaturationShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorContrastShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGammaShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGainShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorOffsetShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.LensFlareTints\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 
 [PlacementMode]
+RecentlyPlaced=/Game/AdvancedAI/BP_AIPlayer.BP_AIPlayer;
 RecentlyPlaced=/Script/Engine.TargetPoint;/Engine/Transient.ActorFactoryTargetPoint_0
 RecentlyPlaced=/Game/Blueprints/Characters/BP_PlayerPawn.BP_PlayerPawn;
 RecentlyPlaced=/Game/Blueprints/GameModes/BP_EQSTestingPawn.BP_EQSTestingPawn;
-RecentlyPlaced=/Game/AdvancedAI/BP_AIPlayer.BP_AIPlayer;
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/AdvancedAI/BP_AI.BP_AI;
 RecentlyPlaced=/Game/Blueprints/Animations/BP_CharacterAnimation.BP_CharacterAnimation;
@@ -4651,10 +4653,10 @@ RecentlyPlaced=/Script/Engine.RectLight;/Engine/Transient.ActorFactoryRectLight_
 RecentlyPlaced=/Script/Engine.LightmassImportanceVolume;/Engine/Transient.ActorFactoryBoxVolume_14
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/GameModes/BP_TestGameMode
-MRUItem1=/Game/Blueprints/GameModes/BP_TestGameState
-MRUItem2=/Game/Blueprints/Weapons/BP_Shotgun
-MRUItem3=/Game/AdvancedAI/BP_AIPlayer
+MRUItem0=/Game/AdvancedAI/BP_AIPlayer
+MRUItem1=/Game/Blueprints/GameModes/BP_TestGameMode
+MRUItem2=/Game/Blueprints/GameModes/BP_TestGameState
+MRUItem3=/Game/Blueprints/Weapons/BP_Shotgun
 MRUItem4=/Game/Blueprints/Weapons/BP_AIMachineGun
 MRUItem5=/Game/Blueprints/GameModes/EnvQueryContext_FindAllPlayers
 MRUItem6=/Game/AdvancedAI/Service_SelectATargetActor
@@ -4802,7 +4804,7 @@ OnlyBuildSelectedLevels=False
 OnlyBuildVisibility=False
 
 [MessageLog]
-LastLogListing=MapCheck
+LastLogListing=PIE
 
 [/Script/UnrealEd.CascadeOptions]
 ModuleColor_Beam_Unselected=(B=235,G=150,R=160,A=0)
