--- a/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -49,7 +49,7 @@ GridEnabled=False
 LastLevel=/Game/Level/maps/VoidMap
 
 [ModuleFileTracking]
-CoopGame.TimeStamp=2020.05.09-01.21.02
+CoopGame.TimeStamp=2020.05.09-01.27.45
 CoopGame.LastCompileMethod=External
 PakFile.TimeStamp=2019.12.20-23.26.51
 PakFile.LastCompileMethod=Unknown
@@ -4329,7 +4329,7 @@ REINST_BP_TrackerBot_C_101.Input=True
 REINST_BP_TrackerBot_C_101.Actor=True
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
 SuppressRestorePreviouslyOpenAssetsNotification=True
 
 [RootWindow]
